...
            .semantics {
                testTagsAsResourceId = true
                if (cardAutoFillEnabled) {
                    contentType = ContentType.CreditCardNumber
                }
            }
            .testTag("card-number-text-field"),
        options = StandardTextFieldOptions(
            inputType = StandardTextFieldOptions.InputType.NUMBER,
            returnType = StandardTextFieldOptions.ReturnType.DONE,
        ),
        onComplete = {
            onComplete(textFieldValue.text)
...
