...
    <string name="airwallex_billing_info">Billing info</string>
    <string name="airwallex_billing_country_or_region">Billing country or region</string>
    <string name="airwallex_shipping">Shipping</string>
    <string name="airwallex_total">Total %s</string>
    <string name="airwallex_pay_now">Pay</string>
    <string name="airwallex_confirm">Confirm</string>
    <string name="airwallex_payment_methods">Payment methods</string>
    <string name="airwallex_cvc_hint" translatable="false">CVC/CVV</string>
    <string name="airwallex_card_name_hint">Name on card</string>
    <string name="airwallex_email_hint">Email</string>
    <string name="airwallex_empty_card_number">Please enter your card number</string>
    <string name="airwallex_invalid_card_number">Card number is invalid</string>
    <string name="airwallex_unsupported_card_number">Card not supported for payment</string>
...
    <string name="airwallex_card_number_placeholder" translatable="false">1234 1234 1234 1234</string>
    <string name="airwallex_expires_hint" translatable="false">MM/YY</string>
    <string name="airwallex_invalid_email">Please enter valid email</string>
    <string name="airwallex_select_your_bank">Select your bank</string>
    <string name="airwallex_invalid_field">Invalid %s</string>
    <string name="airwallex_or_pay_with">Or pay with</string>
    <string name="airwallex_card_information_title">Card information</string>
    <string name="airwallex_add_card_screen_title">Add new</string>
    <string name="airwallex_add_card_button_title">Keep using saved cards</string>
    <string name="airwallex_consent_list_screen_title">Choose a card</string>
    <string name="airwallex_consent_list_button_title">Add new</string>
    <string name="airwallex_consent_detail_button_title">Change</string>
    <string name="airwallex_delete_consent_alert_title">Remove %s?</string>
    <string name="airwallex_delete_consent_alert_content">This option will be permanently removed from your saved payment methods.</string>
    <string name="airwallex_merchant_consent_info_title">Cannot remove card</string>
    <string name="airwallex_merchant_consent_info_content">This payment method is used for other payments you\'ve set up with %1$s. Please contact %2$s to update the payment method for these payments before removing this card.</string>
...
