appId: com.airwallex.paymentacceptance
tags:
  - card 
  - guest
platform:
  android:
    disableAnimations: true  # Disables system animations on the Android emulator
---
- runFlow:
    when:
      true: ${IS_RECORDING}
    commands:
      - startRecording: test_guest_payment_cancel_3ds
- launchApp
- tapOn: "Integrate with Airwallex UI"
- runScript: ../Common/settings.js
- runFlow:
    file: ../Common/flow_update_checkout_mode.yaml
    env:
      CHECKOUT_MODE: ${output.settings.checkoutMode.oneOff} # Ensure one-off checkout mode
- tapOn: setting
- runFlow:
    file: ../Common/flow_update_settings.yaml
    env:
      LAYOUT: ${output.settings.layout.tab} # Tab/Accordion
      ENVIRONMENT: ${output.settings.environment.preview} # STAGING/DEMO
      NEXT_TRIGGERED_BY: ${output.settings.nextTriggeredBy.customer} # Customer/Merchant
      IS_GUEST: true
      USE_NEW_SESSION: false 
- tapOn: "Launch payment list"
- runScript: cards.js
- runFlow:
    file: flow_pay_with_card.yaml
    env:
      CARD_NUMBER: ${output.cards.challenge3DS} # Card number for testing
      CAN_SAVE_CARD: false 
      SHOULD_SAVE_CARD: false 
- runFlow:
    file: ../Common/flow_handle_3ds.yaml
    env:
      CANCEL_3DS: true
- assertVisible: "Pay"
- tapOn: "Navigate up"
- runFlow:
    when:
      true: ${IS_RECORDING}
    commands:
      - stopRecording    