appId: com.airwallex.paymentacceptance
---
- runScript: ../Card/cards.js
- runScript: ../Common/settings.js
- tapOn: "Integrate with Airwallex UI"
- runFlow:
    file: ../Common/flow_update_checkout_mode.yaml
# ensure settings for express checkout
- tapOn: setting
- runFlow:
    file: ../Common/flow_update_settings.yaml
    env:
      EXPRESS_CHECKOUT: true
      NEXT_TRIGGERED_BY: ${NEXT_TRIGGERED_BY || ""}
      GENERATE_NEW_CUSTOMER_ID: ${GENERATE_NEW_CUSTOMER_ID || ""}
      USE_NEW_SESSION: false
      IS_GUEST: ${IS_GUEST || ""}
      UI_TESTING_CUSTOMER_ID: ${UI_TESTING_CUSTOMER_ID || ""}
# card payment
- tapOn: "Launch card payment"
- runFlow:
    file: ../Card/flow_pay_with_card.yaml
    env:
      CARD_NUMBER: ${CARD_NUMBER} # Card number for testing
- runFlow:
    when:
      true: ${HANDLE_3DS}
    file: ../Common/flow_handle_3ds.yaml
    env:
      CANCEL_3DS: false 
- runFlow:
    file: ../Common/flow_handle_payment_result.yaml
    env:
      PAYMENT_RESULT: SUCCESS # SUCCESS/FAILED/CANCELLED
